* Refactored data processing